--- a/DigitToWord/Pages/MainPage.xaml
+++ b/DigitToWord/Pages/MainPage.xaml
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:controls="clr-namespace:DigitToWord.Controls" 
              xmlns:local="clr-namespace:DigitToWord" 
              xmlns:behaviors="clr-namespace:DigitToWord.Behaviors"
+             Visual="Material"
              x:Class="DigitToWord.Pages.MainPage">
     <StackLayout BackgroundColor="#222327">
         <ContentView BackgroundColor="#222327" HeightRequest="80">
@@ -24,7 +25,7 @@
                  <Label x:Name="IntroLabel" Margin="0,24,0,16" FontSize="15" FontFamily="{StaticResource font_book}" TextColor="#ffffff" Text="This tool lets you quickly convert numbers into word" />
                 <StackLayout x:Name="FormLayout" Spacing="16" VerticalOptions="CenterAndExpand">
                     <StackLayout Spacing="8">
-                        <Label Text="YOUR NUMBER" FontFamily="{StaticResource font_medium}" FontSize="12" TextColor="#ffffff" />
+<!--                        <Label Text="YOUR NUMBER" FontFamily="{StaticResource font_medium}" FontSize="12" TextColor="#ffffff" />-->
                         <Entry Text="{Binding Number}" Keyboard="Numeric" TextColor="Black" BackgroundColor="#FFFFFF" 
                                Placeholder="Enter you number" PlaceholderColor="White" >
                             
